--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
 include_directories(lib)
 add_definitions(-DRMT_USE_CUDA)
-add_library(remotery SHARED lib/remotery.c)
-set_target_properties(remotery PROPERTIES COMPILE_DEFINITIONS -DRMT_DLL)
+add_library(Remotery SHARED lib/Remotery.c)
+set_target_properties(Remotery PROPERTIES COMPILE_DEFINITIONS RMT_DLL)
