--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,3 +2,6 @@ include_directories(lib)
 add_definitions(-DRMT_USE_CUDA)
 add_library(Remotery SHARED lib/Remotery.c)
 set_target_properties(Remotery PROPERTIES COMPILE_DEFINITIONS RMT_DLL)
+if(UNIX)
+  target_link_libraries(Remotery pthread)
+endif()
